springboot 3.0 -> 3.5 and java 17 -> 21